[package]
name = "tourniquet"
version = "0.4.0"
authors = ["Tuetuopay <tuetuopay@me.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tuetuopay/tourniquet"
description = "Async native round-robin manager for remote services"
categories = [
    "algorithms",
    "asynchronous",
    "concurrency",
]
keywords = ["async", "round-robin"]
edition = "2024"

[workspace]
members = [
    "tourniquet-celery",
    "tourniquet-tonic",
]

[dependencies]
async-trait = "0.1"
log = "0.4"
tokio = { version = "1", features = ["sync"] }
tracing = { version = "0.1", optional = true }
tracing-futures = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }

[features]
trace = ["tracing", "tracing-futures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
