[package]
name = "tourniquet-celery"
version = "0.3.0"
authors = ["Tuetuopay <tuetuopay@me.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tuetuopay/tourniquet"
description = "Async native round-robin manager for remote services. celery integration."
categories = [
    "algorithms",
    "asynchronous",
    "concurrency",
]
keywords = ["async", "round-robin"]
edition = "2024"

[dependencies]
async-trait = "0.1"
celery-rs = { version = "0.6", default-features = false }
log = "0.4"
tourniquet = { version = "0.4", path = ".." }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
serde = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }

[features]
trace = ["tracing", "tourniquet/trace"]
