[package]
name = "tourniquet-tonic"
version = "0.4.0"
authors = ["Tuetuopay <tuetuopay@me.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tuetuopay/tourniquet"
description = "Async native round-robin manager for remote services. Tonic integration."
categories = [
    "algorithms",
    "asynchronous",
    "concurrency",
]
keywords = ["async", "round-robin"]
edition = "2021"

[dependencies]
async-trait = "0.1"
http = "0.2"
tonic = { version = "0.10", default-features = false, features = ["transport"] }
log = "0.4"
tourniquet = { version = "0.4", path = ".." }
tower-service = "0.3"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
prost = "0.12"
prost-types = "0.12"
serde = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
tonic = "0.10"

[features]
trace = ["tracing", "tourniquet/trace"]
